@@ -23,6 +23,7 @@ Gerard J. Holzmann
 Hashim Ali
 Heikki Tauriainen
 Henrich Lauko
+Jacopo Binchi
 Jan Strejček
 Jean-Michel Couvreur
 Jean-Michel Ilié
